[package]
name = "beegfs-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
ctrlc = "3.4.5"
libc = "0.2.159"
prometheus_exporter = "0.8.5"
regex = "1.11.0"
